--- a/src/styles/components/_touch.scss
+++ b/src/styles/components/_touch.scss
@@ -79,8 +79,8 @@
   }
   
   &--dragging {
-    opacity: 0.8;
-    z-index: 1000;
+    opacity: $opacity-75;
+    z-index: $z-index-dropdown;
   }
 }
 
@@ -133,7 +133,7 @@
     width: 0;
     height: 0;
     border-radius: 50%;
-    background: rgba(var(--primary), 0.2);
+    background: rgba($primary, 0.2);
     transform: translate(-50%, -50%);
     transition: width 0.5s, height 0.5s;
     pointer-events: none;
