--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -53,6 +53,17 @@ $color-base-yellow-600: #CA8A04;
 $color-base-yellow-700: #A16207;
 $color-base-yellow-800: #854D0E;
 $color-base-yellow-900: #713F12;
+// Extended colors
+$color-base-purple-500: #8B5CF6;
+$color-base-purple-100: #EDE9FE;
+$color-base-pink-500: #EC4899;
+$color-base-pink-100: #FCE7F3;
+$color-base-cyan-500: #06B6D4;
+$color-base-cyan-100: #CFFAFE;
+$color-base-orange-500: #F97316;
+$color-base-orange-100: #FFEDD5;
+$color-base-teal-500: #14B8A6;
+$color-base-teal-100: #CCFBF1;
 $color-dark-primary-default: #60A5FA;
 $color-dark-primary-hover: #93C5FD;
 $color-dark-primary-active: #BFDBFE;
