--- a/src/styles/catui-mobile.scss
+++ b/src/styles/catui-mobile.scss
@@ -33,6 +33,7 @@
 @use 'components/touch';
 @use 'components/pull-to-refresh';
 @use 'components/mobile-ui';
+@use 'components/grid-menu';
 
 // ========================================
 // Examples (개발용)
