구혀 Changes to be committed: 	modified:   "docs/\353\252\250\353\223\210_\352\265\254\355\230\204_\354\240\234\354\225\210.md" 	modified:   examples/app.js 	modified:   examples/index.html 	modified:   examples/views/forms.html 	new file:   examples/views/media-demo.html 	new file:   examples/views/onboarding-demo.html 	modified:   examples/views/scroll-demo.html 	modified:   package.json 	modified:   rollup.config.js 	modified:   src/core/router.js 	modified:   src/modules/list/list.scss 	new file:   src/modules/media/media.js 	new file:   src/modules/media/media.scss 	new file:   src/modules/onboarding/onboarding.js 	new file:   src/modules/onboarding/onboarding.scss 	modified:   src/styles/components/_forms.scss

--- a/examples/views/forms.html
+++ b/examples/views/forms.html
@@ -223,13 +223,39 @@
     </div>
     
     <div class="form-group">
-      <label class="form-label">수량</label>
-      <div class="form-number" style="max-width: 160px;">
+      <label class="form-label">Small</label>
+      <div class="form-number form-number-sm">
+        <button class="number-btn">
+          <span class="material-icons">remove</span>
+        </button>
+        <input type="number" class="form-input" value="1" min="1" max="99">
+        <button class="number-btn">
+          <span class="material-icons">add</span>
+        </button>
+      </div>
+    </div>
+    
+    <div class="form-group">
+      <label class="form-label">Default</label>
+      <div class="form-number" id="qty-default">
         <button class="number-btn" id="qty-dec">
           <span class="material-icons">remove</span>
         </button>
         <input type="number" class="form-input" id="qty-input" value="1" min="1" max="99">
         <button class="number-btn" id="qty-inc">
+          <span class="material-icons">add</span>
+        </button>
+      </div>
+    </div>
+    
+    <div class="form-group">
+      <label class="form-label">Large</label>
+      <div class="form-number form-number-lg">
+        <button class="number-btn">
+          <span class="material-icons">remove</span>
+        </button>
+        <input type="number" class="form-input" value="1" min="1" max="99">
+        <button class="number-btn">
           <span class="material-icons">add</span>
         </button>
       </div>
